home-at-sea-cms/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-at-sea-postgres-service
  namespace: home-at-sea
spec:
  type: ClusterIP
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    app: home-at-sea-postgres
